SLVSCODE-710 Fix encoding of "illegal" characters when handling relative paths from server data (#331)