@@ -21,11 +21,15 @@ package org.sonarsource.sonarlint.ls.util;
 
 import java.net.URI;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.EnabledOnOs;
 import org.junit.jupiter.api.condition.OS;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.sonarsource.sonarlint.ls.util.URIUtils.getFullFileUriFromFragments;
 import static org.sonarsource.sonarlint.ls.util.URIUtils.uriStringWithTrailingSlash;
 
@@ -35,35 +39,40 @@ class URIUtilsTest {
   void shouldAddTrailingSlash() {
     var uriStringNoTrailingSlash = "file:///my/workspace/folder";
 
-    assertEquals("file:///my/workspace/folder/", uriStringWithTrailingSlash(uriStringNoTrailingSlash));
+    assertThat(uriStringWithTrailingSlash(uriStringNoTrailingSlash)).isEqualTo("file:///my/workspace/folder/");
   }
 
   @Test
   void shouldNotAddTrailingSlash() {
     var uriStringTrailingSlash = "file:///my/workspace/folder/";
 
-    assertEquals(uriStringTrailingSlash, uriStringWithTrailingSlash(uriStringTrailingSlash));
+    assertThat(uriStringWithTrailingSlash(uriStringTrailingSlash)).isEqualTo(uriStringTrailingSlash);
   }
 
-  @Test
+  @ParameterizedTest(name = "URI built from folder path `{0}` and relative file path `{1}` should be `{2}`")
+  @CsvSource({
+    "file:///my/workspace/folder,src/myFile.py,file:///my/workspace/folder/src/myFile.py",
+    "file:///my/workspace/folder,src/my file.py,file:///my/workspace/folder/src/my%20file.py",
+    "file:///my%20workspace/folder,src/myFile.py,file:///my%20workspace/folder/src/myFile.py",
+  })
   @DisabledOnOs(OS.WINDOWS)
-  void shouldMergeToFullUri() {
-    var workspaceFolderUriString = "file:///my/workspace/folder";
-    var ideFilePath = Path.of("src/myFile.py");
+  void shouldBuildFullFileUriFromFragments(String workspaceFolderUriString, String relativePath, String expectedURI) {
+    var ideFilePath = Paths.get(relativePath);
 
     var result = getFullFileUriFromFragments(workspaceFolderUriString, ideFilePath);
 
-    assertEquals(URI.create("file:///my/workspace/folder/src/myFile.py"), result);
+    assertThat(result).isEqualTo(URI.create(expectedURI));
   }
 
   @Test
+  @EnabledOnOs(OS.WINDOWS)
   void shouldMergeToFullUriWindows() {
     var workspaceFolderUriString = "file:///c:/my/workspace/folder";
     var ideFilePath = Path.of("src\\myFile.py");
 
     var result = getFullFileUriFromFragments(workspaceFolderUriString, ideFilePath);
 
-    assertEquals(URI.create("file:///c:/my/workspace/folder/src/myFile.py"), result);
+    assertThat(result).isEqualTo(URI.create("file:///c:/my/workspace/folder/src/myFile.py"));
   }
 
 }
